--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "quiz_let_mut"
 version = "0.1.0"
 authors = ["Sebastian <vogt999@gmail.com>"]
 
+
+[dependencies]
+rand = "0.5"
+
 [dependencies.gtk]
 version = "0.4.1"
 features = ["v3_10"]
