--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["Sebastian <vogt999@gmail.com>"]
 
 [dependencies]
 rand = "0.5"
+serde_json = "1.0.24"
+serde_derive = "1.0.71"
+serde = "1.0.71"
 
 [dependencies.gtk]
 version = "0.4.1"
